Hoan thanh add to cart checkout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,8 @@
         <activity android:name=".view.RegisterActivity" />
         <activity android:name=".view.ProductDetailActivity" />
         <activity android:name=".view.CartActivity"/>
+        <activity android:name=".view.CheckoutActivity" />
+
         <activity
             android:name=".view.ResetPasswordActivity"
             android:exported="false"
